; ModuleID = '/home/carl/AnghaBench/zfs/lib/libuutil/extr_uu_alloc.c_uu_zalloc.c'
source_filename = "/home/carl/AnghaBench/zfs/lib/libuutil/extr_uu_alloc.c_uu_zalloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@UU_ERROR_SYSTEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @uu_zalloc(i64 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  store i64 %0, i64* %3, align 8
  %5 = load i64, i64* %3, align 8
  %6 = call i8* @malloc(i64 %5)
  store i8* %6, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp eq i8* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %1
  %10 = load i32, i32* @UU_ERROR_SYSTEM, align 4
  %11 = call i32 @uu_set_error(i32 %10)
  store i8* null, i8** %2, align 8
  br label %17

12:                                               ; preds = %1
  %13 = load i8*, i8** %4, align 8
  %14 = load i64, i64* %3, align 8
  %15 = call i32 @memset(i8* %13, i32 0, i64 %14)
  %16 = load i8*, i8** %4, align 8
  store i8* %16, i8** %2, align 8
  br label %17

17:                                               ; preds = %12, %9
  %18 = load i8*, i8** %2, align 8
  ret i8* %18
}

declare dso_local i8* @malloc(i64) #1

declare dso_local i32 @uu_set_error(i32) #1

declare dso_local i32 @memset(i8*, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
